--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules/
 .expo/
 dist/
 web-build/
+build
 expo-env.d.ts
 
 # Native
@@ -34,3 +35,6 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+/ios/
+/android/
