--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "prepare": "expo prebuild -p ios --clean"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@bacons/apple-targets": "^0.2.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.43",
+    "expo-build-properties": "^0.13.2",
+    "expo-dev-client": "^5.0.20",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
@@ -33,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/config-plugins": "^9.0.17",
     "@types/react": "~18.3.12",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
