--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "prepare": "expo prebuild -p ios --clean"
+    "prepare": "expo prebuild"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@bacons/apple-targets": "^0.2.1",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.43",
     "expo-build-properties": "^0.13.2",
@@ -27,13 +27,15 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-reanimated": "3.16.2",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
