before gluestack-ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "moduleResolution": "bundler",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
+      ],
+      "~/*": [
+        "./app/*"
       ]
     },
     "typeRoots": [
