--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@bacons/apple-targets": "^0.2.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.43",
+    "expo": "~52.0.46",
     "expo-build-properties": "^0.13.2",
     "expo-dev-client": "^5.0.20",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
@@ -32,10 +32,9 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -45,6 +44,13 @@
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.3.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": ["@bacons/apple-targets"]
+      }
+    }
   },
   "private": true
 }
