with unistyle@3 & xcode build fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "~/*": [
-        "./app/*"
-      ]
+      "@/*": ["./src/*"]
     },
     "typeRoots": [
       "./types",
