--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fitalic",
-  "main": "expo-router/entry",
+  "main": "src/index",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -31,9 +31,12 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-edge-to-edge": "^1.6.0",
+    "react-native-nitro-modules": "^0.25.2",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-unistyles": "^3.0.0-rc.2",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
