--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-edge-to-edge": "^1.6.0",
+    "react-native-mmkv": "^3.2.0",
     "react-native-nitro-modules": "^0.25.2",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
