--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-unistyles": "^3.0.0-rc.2",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -52,7 +53,9 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "exclude": ["@bacons/apple-targets"]
+        "exclude": [
+          "@bacons/apple-targets"
+        ]
       }
     }
   },
