--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.46",
+    "expo-av": "^15.0.2",
     "expo-build-properties": "^0.13.2",
     "expo-dev-client": "^5.0.20",
+    "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
@@ -31,6 +34,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-edge-to-edge": "^1.6.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-nitro-modules": "^0.25.2",
