--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.14",
+    "@types/lodash": "^4.17.16",
+    "axios": "^1.8.4",
     "expo": "~52.0.46",
     "expo-av": "^15.0.2",
     "expo-build-properties": "^0.13.2",
+    "expo-constants": "^17.0.8",
     "expo-dev-client": "^5.0.20",
     "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
@@ -31,12 +34,15 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
-    "nativewind": "^4.1.23",
+    "formdata-node": "^6.0.3",
+    "lodash": "^4.17.21",
+    "openai": "^4.95.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-edge-to-edge": "^1.6.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-nitro-modules": "^0.25.2",
     "react-native-reanimated": "3.16.2",
@@ -50,6 +56,7 @@
     "@babel/core": "^7.25.2",
     "@expo/config-plugins": "^9.0.17",
     "@types/react": "~18.3.12",
+    "expo-module-scripts": "^4.0.5",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
