--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "dependencies": {
     "@bacons/apple-targets": "^0.2.1",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
     "@types/lodash": "^4.17.16",
     "axios": "^1.8.4",
-    "expo": "~52.0.46",
+    "expo": "^52.0.46",
     "expo-av": "^15.0.2",
     "expo-build-properties": "^0.13.2",
     "expo-constants": "^17.0.8",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "^5.0.20",
     "expo-file-system": "^18.0.12",
     "expo-font": "~13.0.4",
@@ -50,17 +51,20 @@
     "react-native-screens": "~4.4.0",
     "react-native-unistyles": "^3.0.0-rc.2",
     "react-native-web": "~0.19.13",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/config-plugins": "^9.0.17",
     "@types/react": "~18.3.12",
+    "@types/uuid": "^10.0.0",
     "expo-module-scripts": "^4.0.5",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "@react-native-community/cli": "latest"
   },
   "expo": {
     "doctor": {
